--- a/cloud-provider-payment8002/src/main/resources/application.yml
+++ b/cloud-provider-payment8002/src/main/resources/application.yml
@@ -22,6 +22,10 @@ eureka:
     service-url:
 #      defaultZone: http://eureka7002.com:7002/eureka
       defaultZone: http://eureka7002.com:7002/eureka/,http://eureka7001.com:7001/eureka/
+  instance:
+    instance-id: payment8002
+    prefer-ip-address: true     # 访问路径可以IP显示
+
 
 mybatis:
   mapper-locations: classpath*:mapper/*.xml
