--- a/cloud-config-client-3355/pom.xml
+++ b/cloud-config-client-3355/pom.xml
@@ -20,7 +20,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <!--监控-->
+        <!--监控,除了网关不用其他都要加-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
