--- a/cloud-stream-rabbitmq-consumer8803/src/main/resources/application.yml
+++ b/cloud-stream-rabbitmq-consumer8803/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8802
+  port: 8803
 
 spring:
   application:
@@ -21,7 +21,7 @@ spring:
           destination: studyExchange #表示要使用的Exchange名称定义
           content-type: application/json #设置消息类型，本次为json，本文要设置为“text/plain”
           binder: defaultRabbit #设置要绑定的消息服务的具体设置
-          group: newland # 如果不做分组，那么默认会生成不同的组，会产生重复消费的现象，当前默认是轮询
+          group: newland # 如果不做分组，那么默认会生成不同的组，会产生重复消费的现象
 
 eureka:
   client:
@@ -30,5 +30,5 @@ eureka:
   instance:
     lease-renewal-interval-in-seconds: 2 #设置心跳的时间间隔（默认是30S)
     lease-expiration-duration-in-seconds: 5 #如果超过5S间隔就注销节点 默认是90s
-    instance-id: receive-8802.com #在信息列表时显示主机名称
+    instance-id: receive-8803.com #在信息列表时显示主机名称
     prefer-ip-address: true #访问的路径变为IP地址
