--- a/cloud-consumer-feign-order80/src/main/resources/application.yml
+++ b/cloud-consumer-feign-order80/src/main/resources/application.yml
@@ -16,7 +16,7 @@ ribbon:
   ReadTimeout: 5000
   #指的是建立连接后从服务器读取到可用资源所用的时间
   ConnectTimeout: 5000
-#
+#  test
 logging:
   level:
     #feign日志以什么级别监控那个接口
